tests/fail/space_char.rs
concat_idents::concat_idents!(fn_name = ' ', name {
    fn fn_name() {
        /* idents cannot contain spaces */
    }
});

fn main() {}
