tests/fail/space_char.stderr
error: character literals can only contain [a-zA-Z0-9_]
 --> $DIR/space_char.rs:1:41
  |
1 | concat_idents::concat_idents!(fn_name = ' ', name {
  |                                         ^^^
